part2/2.05/secret-example/ping-pong-secret/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-secret-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-secret-app
  template:
    metadata:
      labels:
        app: ping-pong-secret-app
    spec:
      containers:
        - name: ping-pong-secret
          image: mmiglioranza22/k8s-ex.2.05-ping-pong-secret
          # 2 ways of setting secrets:
          # assuming the secret was set in source code as API_KEY env variable name
          # envFrom:
          #   - secretRef:
          #       name: ping-pong-apikey -> metadata.name of Secret
          # assuming the secret has any other name (chosen one is more declarative)
