part2/2.05/secret-example/ping-pong-secret/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-secret-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-secret-app
  ports:
    - name: ping-pong
      port: 5151
      protocol: TCP
      targetPort: 3000 # The app's exposed port (defined 3000 in the source code)
