part2/2.05/secret-example/ping-pong-secret/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-secret-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ping-pong-secret-svc
                port:
                  number: 5151 # points to the port assigned to the read-write-app ClusterIp service (this is inside the cluster)
